--- a/index.html
+++ b/index.html
@@ -17,27 +17,29 @@
 <body>
 
     <div class="container-fluid h-100">
-        <div class="row">
+        <div class="row d-flex">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="#"><img src="./img/logo.svg" alt=""></a>
+                <div class="container-fluid pr-0">
+                    <a class="navbar-brand" href="#">
+                        <img class="logo-big" src="./img/logo.svg" alt="">
+                        <img class="logo-small" src="./img/mobile-logo.png" alt="">
+                    </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="collapse navbar-collapse d-flex" id="navbarSupportedContent">
-                        <form class="d-flex w-90">
+                    <div class=" collapse navbar-collapse d-flex w-80" id="navbarSupportedContent">
+                        <form class=" search-bar d-flex w-100">
                             <input class="form-control me-2" type="search"
                                 placeholder="Prova a cercare: Lezioni di Laravel" aria-label="Search">
                         </form>
-
-                        <div class="w-10">
-                            <i class="fas fas fa-list"></i>
-                            <i class="fas fas fa-question-circle"></i>
-                            <i class="fas fa-list"></i>
-                            <i class="fas fas fa-bell"></i>
-                        </div>
+                    </div>
+                    <div class="col-1 d-flex flex-justify-around">
+                        <i class="fas fas fa-list"></i>
+                        <i class="fas fas fa-question-circle"></i>
+                        <i class="fas fa-list"></i>
+                        <i id="bell-icon" class="fas fas fa-bell"></i>
                     </div>
                 </div>
             </nav>
@@ -46,38 +48,55 @@
             <div class="col-1 left-nav-bg ">
                 <div>
                     <ul class="nav side-bar flex-column w-t">
-                        <li class="nav-item d-flex flex-align-center">
-                            <i class="fas fas fa-home"></i><a class="nav-link active" aria-current="page"
+                        <li class="nav-item d-flex flex-align-center flex-justify-center">
+                            <i class="left-nav-icons fas fas fa-home"></i><a class="left-nav-links nav-link active" aria-current="page"
                                 href="#">Home</a>
                         </li>
-                        <li class="nav-item d-flex flex-align-center">
-                            <i class="fas fas fa-chart-bar"></i><a class="nav-link" href="#">Stats</a>
+                        <li class="nav-item d-flex flex-align-center flex-justify-center">
+                            <i class="left-nav-icons fas fas fa-chart-bar"></i><a class="left-nav-links nav-link" href="#">Stats</a>
                         </li>
-                        <li class="nav-item d-flex flex-align-center">
-                            <i class="fas fas fas fa-signal"></i><a class="nav-link" href="#">Signals</a>
+                        <li class="nav-item d-flex flex-align-center flex-justify-center">
+                            <i class="left-nav-icons fas fas fas fa-signal"></i><a class="left-nav-links nav-link" href="#">Signals</a>
                         </li>
-                        <li class="nav-item d-flex flex-align-center">
-                            <i class="fas fas fas fa-signal"></i><a class="nav-link" href="#">Signals</a>
+                        <li class="nav-item d-flex flex-align-center flex-justify-center">
+                            <i class="left-nav-icons fas fas fas fa-signal"></i><a class="left-nav-links nav-link" href="#">Signals</a>
                         </li>
                     </ul>
                 </div>
             </div>
             <div class="col-11">
                 <div class="row d-flex">
-                    <div class="col-12">
+                    <div class="col-12 w-t">
                         <div class="row bg-blue">
-                            <div class="col-4 p">
-                                <h1>Boolean</h1>
+                            <div class="col-5 py-16 d-flex flex-column">
+                                <div class="d-flex  ml-16 flex-align-center">
+                                    <h3 class="d-flex">Boolean</h3>
+                                    <div class="breadcrumbs-tags">
+                                        <p>Piano Blazer</p>
+                                    </div>
+                                </div>
+                                <div class="d-flex ml-16 flex-align-center">
+
+                                    <p class="breadcrumbs-tags">3 app</p>
+                                    <p class="">>></p>
+                                    <p class="breadcrumbs-tags">Boolean mobile app</p>
+                                    <p class="breadcrumbs-tags">Boolean web app</p>
+                                    <p class="breadcrumbs-tags">Boolean blog app</p>
+
+
+                                </div>
+
 
                             </div>
 
-                            <div class="col-4">
-                                <h1>Boolean</h1>
+                            <div class="col-4 py-16">
+                                <p>Studenti online negli ultimi 30 giorni</p>
+                                <h2>125</h2>
 
                             </div>
 
-                            <div class="col-4">
-                                <h1>Boolean</h1>
+                            <div class="col-3 py-16 d-flex">
+                                <p>Nuovo studente</p>
 
                             </div>
                         </div>
@@ -631,21 +650,21 @@
                                                     <input class="form-check-input" type="checkbox" value=""
                                                         id="flexCheckDefault">
                                                     <label class="form-check-label" for="flexCheckDefault">
-                                                        Default checkbox
+                                                        kickoff nuove classi
                                                     </label>
                                                 </div>
                                                 <div class="form-check">
                                                     <input class="form-check-input" type="checkbox" value=""
                                                         id="flexCheckDefault">
                                                     <label class="form-check-label" for="flexCheckDefault">
-                                                        Default checkbox
+                                                        Lezione su Bootstrap 5 in classe #75
                                                     </label>
                                                 </div>
                                                 <div class="form-check">
                                                     <input class="form-check-input" type="checkbox" value=""
                                                         id="flexCheckDefault">
                                                     <label class="form-check-label" for="flexCheckDefault">
-                                                        Default checkbox
+                                                        Controllare Username GitHub studenti
                                                     </label>
                                                 </div>
                                             </div>
@@ -675,18 +694,6 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- <div class="card graph-card">
-                                <div class="card-body">
-                                    <div>
-                                        <img id="stats-img" src="./img/stats.jpeg" alt="">
-                                        <p>Utenti attivi</p>
-                                        <p>Lista degli utenti attivi in piattaforma nell'ultimo mese</p>
-                                        <p>Gennaio: 1200</p>
-                                        <p>Febbraio: 800</p>
-                                        <p>Marzo: 1500</p>
-                                    </div>
-                                </div>
-                            </div> -->
                     </div>
                 </div>
             </div>
